[package]
name = "evnet"
version = "0.1.0-rc8"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An event driven peer to peer networking plugin for bevy built ontop of bevy_matchbox and webrtc"
repository = "https://github.com/MalekiRe/evnet"

[dependencies]
bevy = "0.15.1"
bevy_matchbox = "0.11.0"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
const-fnv1a-hash = "1.1.0"


[dev-dependencies]
random-number = "0.1.9"
avian3d = { version = "0.2.1", features = ["serialize"] }
bevy-tnua = { git = "https://github.com/idanarye/bevy-tnua", rev = "950e903a431d4cb839dfac09294171f569dc8ff5"}
bevy-tnua-avian3d = { git = "https://github.com/idanarye/bevy-tnua", rev = "950e903a431d4cb839dfac09294171f569dc8ff5"}
tnua-demos-crate = { git = "https://github.com/idanarye/bevy-tnua", features = ["avian", "avian3d"], rev = "950e903a431d4cb839dfac09294171f569dc8ff5"}