[package]
name = "evnet"
version = "0.1.0-rc11"
edition = "2024"

[dependencies]
bevy = "0.15.3"
flume = "0.11.1"
serde = { version = "1.0.218", features = ["derive"] }
bevy_matchbox = "0.11.0"
bincode = "1.3.3"
matchbox_socket = "0.11.0"
uuid = { version = "1.12.1", features = ["v4"] }
avian3d = { version = "0.2.1", features = ["serialize"] }
random-number = "0.1.9"
evnet-macros = { path = "./evnet-macros"}
bevy_mod_audio = "0.1.0-rc1"
rodio = "0.20.1"
[dependencies.opus]
git = "https://github.com/Schmarni-Dev/opus-rs"
branch = "unsafe-libopus"
default-features = false
features = [
    "unsafe-libopus-backend",
]